--- a/html/package.json
+++ b/html/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blat",
+  "name": "ispcr",
   "version": "1.0.0",
   "main": "index.php",
   "author": "REDfly team",
@@ -12,6 +12,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "eslint": "^7.17.0"
+    "eslint": "^7.18.0"
   }
 }
